// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders icon 1`] = `
<svg
  className="svg-icon icon-cog"
  role="img"
  style={Object {}}
>
  <use
    viewBox="0 0 512 512"
    xlinkHref="/icons/cog.svg#cog"
  />
</svg>
`;

exports[`Renders icon from a subfolder 1`] = `
<svg
  className="svg-icon icon-folder"
  role="img"
  style={Object {}}
>
  <use
    viewBox="0 0 512 512"
    xlinkHref="/icons/16/folder.svg#folder"
  />
</svg>
`;

exports[`Renders icon with aria label 1`] = `
<svg
  aria-label="A cog icon"
  className="svg-icon icon-cog"
  role="img"
  style={Object {}}
>
  <use
    viewBox="0 0 512 512"
    xlinkHref="/icons/cog.svg#cog"
  />
</svg>
`;

exports[`Renders icon with dimensions 1`] = `
<svg
  className="svg-icon icon-cog"
  role="img"
  style={
    Object {
      "height": "142px",
      "width": "142px",
    }
  }
>
  <use
    viewBox="0 0 512 512"
    xlinkHref="/icons/cog.svg#cog"
  />
</svg>
`;
